--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 # CMake for Glew, Glfw and Glm
 
 add_subdirectory("GL")
+add_subdirectory("GLAD")
 add_subdirectory("GLFW")
 add_subdirectory("GLM")
